[package]
name = "termcolor-json"
description = "A library for writing colored [JSON](https://crates.io/crates/serde_json) output to a [termcolor](https://crates.io/crates/termcolor) terminal."
version = "0.1.1"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/termcolor-json"
documentation = "https://docs.rs/termcolor-json"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
serde = "1.0.127"
serde_json = "1.0.66"
termcolor = "1.1.2"

[dev-dependencies]
